--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /******************************************************************
-Theme Name: Bones (Rename Me!)
-Theme URI: http://www.themble.com/bones
-Description: This site was built using the Bones Development Theme. For more information about Bones or to view documentation, you can visit the <a href="https://github.com/eddiemachado/bones/issues" title="Bones Issues">Bones Issues</a> page on Github. You'll want to customize this for your clients with your own information.
+Theme Name: Meat (Rename Me!)
+Theme URI: https://github.com/forsvunnet/meat
+Description: This site was built using the Meat Development Theme.
 Author: Your Name Here
 Author URI: http://www.yoururlhere.com
 Version: 1.3
