--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /******************************************************************
-Theme Name: Meat (Rename Me!)
+Theme Name: Meat Theme
 Theme URI: https://github.com/forsvunnet/meat
 Description: This site was built using the Meat Development Theme.
 Author: Your Name Here
-Author URI: http://www.yoururlhere.com
-Version: 1.3
-Tags: flexible-width, translation-ready, microformats, rtl-language-support
+Author URI: http://www.yoururlhere.co.uk
+Version: 0.2a
+Tags: Custom Built, We made this for you.
 
 License: WTFPL
 License URI: http://sam.zoy.org/wtfpl/
