Sorted the login css out

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /******************************************************************
 Theme Name: Meat Theme
-Theme URI: https://github.com/forsvunnet/meat
+Theme URI: http://forsvunnet.github.io/meat
 Description: This site was built using the Meat Development Theme.
-Author: Your Name Here
-Author URI: http://www.yoururlhere.co.uk
+Author: Andrew Lazarus &amp; Eivin Landa
+Author URI: http://github.com/forsvunnet/meat
 Version: 0.2a
 Tags: Custom Built, We made this for you.
 
